@@ -38,6 +38,9 @@
 char originID[2048];
 char *rootdir = "";
 
+const char *policies_dir = DEBSIG_POLICIES_DIR;
+const char *keyrings_dir = DEBSIG_KEYRINGS_DIR;
+
 char *deb = NULL;
 FILE *deb_fs = NULL;
 
@@ -288,6 +291,8 @@ static void outputUsage(void) {
 "      --list-policies      Only list policies that can be used to validate\n"
 "                             this sig. Only runs through 'Selection' block.\n"
 "      --use-policy <name>  Specify the short policy name to use.\n"
+"      --policies-dir <dir> Use an alternative policies directory.\n"
+"      --keyrings-dir <dir> Use an alternative keyrings directory.\n"
 "      --root <dir>         Use an alternative root directory for policy lookup.\n"
 "      --version            Output version info, and exit.\n"
 );
@@ -350,6 +355,18 @@ int main(int argc, char *argv[]) {
 		ds_printf(DS_LEV_ERR, "--use-policy requires an argument");
 		outputUsage();
 	    }
+	} else if (strcmp(argv[i], "--policies-dir") == 0) {
+	    policies_dir = argv[++i];
+	    if (i == argc || policies_dir[0] == '-') {
+		ds_printf(DS_LEV_ERR, "--policies-dir requires an argument");
+		outputUsage();
+	    }
+	} else if (strcmp(argv[i], "--keyrings-dir") == 0) {
+	    keyrings_dir = argv[++i];
+	    if (i == argc || keyrings_dir[0] == '-') {
+		ds_printf(DS_LEV_ERR, "--keyrings-dir requires an argument");
+		outputUsage();
+	    }
 	} else if (strcmp(argv[i], "--root") == 0) {
 	    rootdir = argv[++i];
 	    if (i == argc || rootdir[0] == '-') {
@@ -380,7 +397,7 @@ int main(int argc, char *argv[]) {
     strncpy(originID, tmpID, sizeof(originID));
 
     /* Now we have an ID, let's check the policy to use */
-    snprintf(buf, sizeof(buf) - 1, DEBSIG_POLICIES_DIR_FMT, rootdir, originID);
+    snprintf(buf, sizeof(buf) - 1, "%s%s/%s", rootdir, policies_dir, originID);
     if ((pd = opendir(buf)) == NULL)
 	ds_fail_printf(DS_FAIL_UNKNOWN_ORIGIN,
 		       "Could not open Origin dir %s: %s\n", buf, strerror(errno));
