@@ -57,8 +57,9 @@ char *getKeyID (const struct match *mtc) {
 
     gpg_init();
 
-    snprintf(buf, sizeof(buf) - 1, GPG_PROG" "GPG_ARGS_FMT" --list-packets -q "DEBSIG_KEYRINGS_FMT,
-	     GPG_ARGS, rootdir, originID, mtc->file);
+    snprintf(buf, sizeof(buf) - 1,
+	     GPG_PROG" "GPG_ARGS_FMT" --list-packets -q %s%s/%s/%s",
+	     GPG_ARGS, rootdir, keyrings_dir, originID, mtc->file);
 
     if ((ds = popen(buf, "r")) == NULL) {
 	perror("gpg");
@@ -182,8 +183,8 @@ int gpgVerify(const char *data, struct match *mtc, const char *sig) {
 
     gpg_init();
 
-    snprintf(keyring, sizeof(keyring) - 1, DEBSIG_KEYRINGS_FMT,
-             rootdir, originID, mtc->file);
+    snprintf(keyring, sizeof(keyring) - 1, "%s%s/%s/%s",
+             rootdir, keyrings_dir, originID, mtc->file);
     if (stat(keyring, &st)) {
 	ds_printf(DS_LEV_DEBUG, "gpgVerify: could not stat %s", keyring);
 	return 0;
