@@ -8,6 +8,7 @@ debsig-verify (0.11) UNRELEASED; urgency=low
   * Reformat and reflow --help output.
   * Add a --root option to use an alternative root directory.
     Thanks to Michael Vogt <mvo@ubuntu.com>. Closes: #758525
+  * Add new --policies-dir and --keyrings-dir options.
 
  -- Guillem Jover <guillem@debian.org>  Tue, 19 Aug 2014 10:39:31 +0200
 
